NPT-20: Switched from H2 to MongoDB in-memory database
Since there are no first party support from MongoDB for in-memory DB, I used flapdoodle's solution, which was recommended by ChatGPT and multiple other sources.